--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,11 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 100px;
+  margin-bottom: 20px;
   padding: 0 20px;
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
 }
