--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,20 +1,47 @@
-.card_section {
+.card__section {
   margin-top: 20px;
 }
 
-.card_name {
+.card__name {
+  position: absolute;
+  left: 140px;
+  top: 18px;
+  width: 73px;
+  height: 24px;
+  color: rgba(0, 0, 0, 0.6);
+  background-color: white;
+  border-radius: 4px;
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.2;
   text-align: center;
+  align-items: center;
 }
 
-.card_image {
+.card__image {
   width: 328px;
   height: 328px;
   border-radius: 10px;
+  cursor: pointer;
 }
 
-.card_items {
+.card__item {
+  position: relative;
+}
+
+.card__items {
   display: flex;
   flex-wrap: wrap;
   gap: 17px;
+  margin-top: 20px;
   justify-content: center;
+}
+
+.card__section-title {
+  color: #000;
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
 }
