--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -2,14 +2,18 @@
   position: relative;
 }
 
-.weather_info {
+.weather__info {
   position: absolute;
-  top: 12px;
+  top: 16px;
   left: 16px;
   color: white;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
   font-size: 36px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 1.1;
 }
 
-.weather_image {
+.weather__image {
   width: 100%;
 }
