Added new modals, toogle switch, profile, and api

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,22 +1,21 @@
 .card__section {
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .card__name {
   position: absolute;
-  left: 140px;
   top: 18px;
-  width: 73px;
-  height: 24px;
+  right: 130px;
+  margin: 0;
+  text-align: center;
+  padding: 0 12px;
+  border-radius: 4px;
   color: rgba(0, 0, 0, 0.6);
   background-color: white;
-  border-radius: 4px;
   font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.2;
-  text-align: center;
-  align-items: center;
 }
 
 .card__image {
@@ -34,8 +33,9 @@
   display: flex;
   flex-wrap: wrap;
   gap: 17px;
-  margin-top: 20px;
+  margin-top: 34px;
   justify-content: center;
+  list-style: none;
 }
 
 .card__section-title {
@@ -43,5 +43,5 @@
   font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
   font-size: 20px;
   font-weight: 700;
-  line-height: 24px;
+  line-height: 1.2;
 }
