--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,7 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  margin-top: 100px;
-  margin-bottom: 20px;
+  margin: 20px 0;
   padding: 0 20px;
   font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
   font-size: 16px;
