--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,8 +2,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 60px;
+  margin-top: 60px;
+  margin-bottom: 30px;
   padding: 0 20px;
+}
+
+.header__left {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.header__right {
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
 .header__logo {
@@ -12,10 +25,16 @@
   align-items: center;
 }
 
-.header__avatar-logo {
+/* .header__avatar-logo {
   display: flex;
   gap: 20px;
   align-items: center;
+} */
+
+.header__avatar {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .header__button {
@@ -44,4 +63,5 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
+  line-height: 1.2;
 }
