--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -3,8 +3,8 @@
   width: 16px;
   height: 16px;
   position: absolute;
-  top: 24px;
-  right: 24px;
+  top: 44px;
+  right: 44px;
   border: none;
   cursor: pointer;
 }
@@ -19,11 +19,14 @@
   position: relative;
   background-color: white;
   max-width: 498px;
+  max-height: 610px;
   width: 100%;
+  /* height: 100%; */
+  border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 16px;
 }
 
-.modal_item-description {
+/* .modal_item-description {
   padding: 20px;
   box-sizing: border-box;
   border-radius: 0 0 20px 20px;
@@ -33,21 +36,36 @@
   font-size: 20px;
   line-height: 1.2;
   font-weight: 700;
+} */
+
+.modal__footer {
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
+  margin-left: 6px;
+  font-size: 20px;
 }
 
 .modal__item-name {
-  color: black;
-  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  margin: 25px 0 12px;
   font-size: 20px;
   font-weight: 700;
-  line-height: 24px;
-  padding-bottom: 12px;
 }
 
-.modal__item-weather {
-  color: #000;
-  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
-  font-size: 20px;
+.modal__weather-type {
+  position: absolute;
+  margin-top: 60px;
   font-weight: 700;
-  line-height: 24px;
+}
+
+.modal__delete-button {
+  margin: 25px 24px 0 0;
+  padding: 0;
+  max-height: 24px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-size: 20px;
+  color: rgba(255, 77, 0, 1);
 }
