--- a/src/components/Profile/ClothesSection/ClothesSection.css
+++ b/src/components/Profile/ClothesSection/ClothesSection.css
@@ -15,7 +15,7 @@
   line-height: 1.2;
 }
 
-.clothes-section__btn {
+.clothes-section__button {
   color: rgba(0, 0, 0, 0.6);
   font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
   font-size: 20px;
