--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -11,6 +11,8 @@
 
 .modal__item-image {
   max-width: 498px;
+  max-height: 490px;
+  width: 100%;
   border-top-right-radius: 16px;
   border-top-left-radius: 16px;
 }
