--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -23,22 +23,9 @@
   max-width: 498px;
   max-height: 610px;
   width: 100%;
-  /* height: 100%; */
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 16px;
 }
-
-/* .modal_item-description {
-  padding: 20px;
-  box-sizing: border-box;
-  border-radius: 0 0 20px 20px;
-  display: flex;
-  justify-content: space-between;
-  background-color: white;
-  font-size: 20px;
-  line-height: 1.2;
-  font-weight: 700;
-} */
 
 .modal__footer {
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
@@ -62,6 +49,30 @@
 }
 
 .modal__delete-button {
+  margin: 25px 24px 0 0;
+  padding: 0;
+  max-height: 24px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-size: 20px;
+  color: rgba(255, 77, 0, 1);
+}
+
+.modal__delete-button_visible {
+  visibility: visible;
+  margin: 25px 24px 0 0;
+  padding: 0;
+  max-height: 24px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-size: 20px;
+  color: rgba(255, 77, 0, 1);
+}
+
+.modal__delete-button_hidden {
+  visibility: hidden;
   margin: 25px 24px 0 0;
   padding: 0;
   max-height: 24px;
