--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -17,3 +17,28 @@
 .sidebar__avatar {
   margin-right: 16px;
 }
+
+.sidebar__button-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 24px;
+  gap: 8px;
+}
+
+.sidebar__button {
+  color: #000;
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.2;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  text-align: left;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.sidebar__button:hover {
+  opacity: 0.4;
+}
