--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -2,7 +2,19 @@
   margin-top: 40px;
 }
 
-.card__name {
+.card__title {
+  display: flex;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  gap: 10px;
+  align-items: center;
+  background: #fff;
+  border-radius: 6px;
+  padding: 5px;
+}
+
+/* .card__name {
   position: absolute;
   top: 18px;
   right: 130px;
@@ -14,6 +26,19 @@
   background-color: white;
   font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
   font-size: 16px;
+  font-weight: 700;
+  line-height: 1.2;
+} */
+
+.card__name {
+  margin: 0;
+  text-align: center;
+  border-radius: 4px;
+  color: rgba(0, 0, 0, 0.6);
+  background-color: #fff;
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 16px;
+  font-style: normal;
   font-weight: 700;
   line-height: 1.2;
 }
@@ -44,4 +69,22 @@
   font-size: 20px;
   font-weight: 700;
   line-height: 1.2;
+  margin: 0px;
+}
+
+.card__likeButton {
+  width: 22px;
+  height: 19px;
+  transition: opacity 0.5s ease-in-out;
+  cursor: pointer;
+  background: no-repeat;
+  border: none;
+}
+
+.card__likeButton-active {
+  background-image: url(../../images/heartButton_active.svg);
+}
+
+.card__likeButton-inactive {
+  background-image: url(../../images/heartButton_inactive.svg);
 }
