--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -5,17 +5,27 @@
   max-height: 56px;
 }
 
+.profile__sidebar-avatar-name {
+  max-height: 56px;
+  display: flex;
+  gap: 16px;
+  margin-right: 116px;
+  align-items: center;
+}
+
 .sidebar__name {
-  margin: 0;
   font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
-  white-space: nowrap;
+  line-height: 1.2;
+  text-align: center;
+  text-wrap: nowrap;
 }
 
 .sidebar__avatar {
-  margin-right: 16px;
+  width: 56px;
+  height: 56px;
 }
 
 .sidebar__button-container {
