--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -1,14 +1,18 @@
 .clothes-section {
-  display: flex;
-  flex-direction: column;
+  margin-top: 10px;
 }
 
 .clothes-section__container {
   display: flex;
+  margin-bottom: 16px;
+  align-items: center;
   gap: 20px;
 }
 
 .clothes-section__title {
+  margin: 0;
+  color: #000;
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
@@ -25,13 +29,15 @@
   background-color: #fff;
   border: none;
   cursor: pointer;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.clothes-section__button:hover {
+  opacity: 0.4;
 }
 
 .clothes-section__cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 17px;
-  margin-top: 34px;
-  padding: 0;
-  list-style: none;
+  gap: 16px;
 }
