--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -1,84 +1,99 @@
-.modal__item-close-button {
-  background: url(../../images/closeButton.svg) no-repeat center;
-  width: 16px;
-  height: 16px;
+.modal__container-image {
+  max-width: 498px;
+  max-height: 610px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: white;
+  border-radius: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.modal__close-button-white {
+  background-image: url(../../images/closeButton_white.svg);
   position: absolute;
-  top: 44px;
-  right: 44px;
+  top: 20px;
+  right: 28px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  width: 20px;
+  height: 20px;
   border: none;
   cursor: pointer;
 }
 
-.modal__item-image {
+.modal__image-preview {
   max-width: 498px;
   max-height: 490px;
-  width: 100%;
   border-top-right-radius: 16px;
   border-top-left-radius: 16px;
 }
 
-.modal__content {
-  position: relative;
-  background-color: white;
-  max-width: 498px;
-  max-height: 610px;
-  width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  border-radius: 16px;
-}
-
-.modal__footer {
-  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
-  display: flex;
-  justify-content: space-between;
-  text-align: left;
-  margin-left: 6px;
-  font-size: 20px;
-}
-
 .modal__item-name {
-  margin: 25px 0 12px;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
   font-size: 20px;
+  font-style: normal;
   font-weight: 700;
+  line-height: 1.1;
+  margin-top: 20px;
+  margin-left: 32px;
 }
 
 .modal__weather-type {
-  position: absolute;
-  margin-top: 60px;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  font-size: 20px;
+  font-style: normal;
   font-weight: 700;
+  line-height: 1.1;
+  margin-left: 32px;
+  margin-top: 12px;
+  margin-bottom: 32px;
 }
 
 .modal__delete-button {
-  margin: 25px 24px 0 0;
-  padding: 0;
-  max-height: 24px;
+  position: absolute;
+  bottom: 68px;
+  right: 32px;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #ff4d00;
   border: none;
   background: transparent;
   cursor: pointer;
-  font-size: 20px;
-  color: rgba(255, 77, 0, 1);
 }
 
 .modal__delete-button_visible {
   visibility: visible;
-  margin: 25px 24px 0 0;
-  padding: 0;
-  max-height: 24px;
+  position: absolute;
+  bottom: 68px;
+  right: 32px;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #ff4d00;
   border: none;
   background: transparent;
   cursor: pointer;
-  font-size: 20px;
-  color: rgba(255, 77, 0, 1);
 }
 
 .modal__delete-button_hidden {
   visibility: hidden;
-  margin: 25px 24px 0 0;
-  padding: 0;
-  max-height: 24px;
+  position: absolute;
+  bottom: 68px;
+  right: 32px;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #ff4d00;
   border: none;
   background: transparent;
   cursor: pointer;
-  font-size: 20px;
-  color: rgba(255, 77, 0, 1);
 }
