--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -13,13 +13,104 @@
 .modal__content {
   background-color: white;
   position: relative;
+  max-width: 496px;
+  max-height: 436px;
   width: 100%;
+  height: 100%;
   border-radius: 20px;
-  padding: 34px 36px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.modal__title {
+  margin: 28px 28px 0px 28px;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.2px;
+}
+
+.modal__form {
+  margin: 0 28px 0 28px;
+}
+
+.modal__text-inputs {
+  display: flex;
+  flex-direction: column;
+  padding-top: 24px;
+  gap: 24px;
+}
+
+.modal__label {
+  display: flex;
+  flex-direction: column;
+  color: #000;
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.1;
+  gap: 8px;
+}
+
+.modal__input {
+  color: rgba(0, 0, 0, 0.5);
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.1;
+  border-top: #000;
+  border-left: #000;
+  border-right: #000;
+}
+
+.modal__select-weather {
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.1;
+  padding-top: 24px;
+  margin-top: 0;
+  margin-bottom: 17px;
+}
+
+.modal__radio-inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.1;
+  color: rgba(0, 0, 0, 0.5);
+  accent-color: #000;
+}
+
+.modal__radio-button {
+  height: 16px;
+  width: 16px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.modal__close-button {
+  position: absolute;
+  top: 20px;
+  right: 28px;
+  background-image: url(../../images/closeButton.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  width: 20px;
+  height: 20px;
+  border: none;
+  cursor: pointer;
 }
 
 .modal__submit-button {
-  margin-top: 34px;
+  margin-top: 32px;
   width: 124px;
   height: 36px;
   padding: 0;
@@ -27,7 +118,7 @@
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
   font-size: 16px;
   font-weight: 700;
-  font-weight: 700;
+  font-style: normal;
   line-height: 1.1;
   border-radius: 4px;
   background-color: #000;
@@ -54,24 +145,10 @@
   cursor: default;
 }
 
-/* .modal__close-button {
-  position: absolute;
-  top: 20px;
-  right: 28px;
-  width: 20px;
-  height: 20px;
-  background: url(../../images/closeButton.svg) no-repeat center;
-  border: none;
-  cursor: pointer;
-} */
+.modal_container_login {
+  max-height: 304px;
+}
 
-.modal__title {
-  max-width: 440px;
-  margin: 0px;
-  padding-bottom: 20px;
-  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.2px;
+.modal_container_editProfile {
+  max-height: 304px;
 }
