updated item modal

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -14,22 +14,6 @@
   padding: 5px;
 }
 
-/* .card__name {
-  position: absolute;
-  top: 18px;
-  right: 130px;
-  margin: 0;
-  text-align: center;
-  padding: 0 12px;
-  border-radius: 4px;
-  color: rgba(0, 0, 0, 0.6);
-  background-color: white;
-  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.2;
-} */
-
 .card__name {
   margin: 0;
   text-align: center;
@@ -46,21 +30,20 @@
 .card__image {
   width: 328px;
   height: 328px;
-  border-radius: 10px;
+  border-radius: 30px;
   cursor: pointer;
 }
 
-.card__item {
+.card__element {
   position: relative;
 }
 
 .card__items {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 17px;
   margin-top: 34px;
-  justify-content: center;
-  list-style: none;
 }
 
 .card__section-title {
